media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: jellyfin-ingress
  name: jellyfin
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: jellyfin.int.kyledev.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - hosts:
        - jellyfin.int.kyledev.co
      secretName: jellyfin-kyledev-tls-prod
